con las queries

--- a/css/style.css
+++ b/css/style.css
@@ -444,3 +444,240 @@ h4 {
 
 .pais {
   margin-top: -20px; }
+
+footer {width: 100%;
+  text-align: center;}
+
+
+/*-------------------------------------------------------------------------MEDIA QUERIES-------------------------------------------------------------*/
+
+/*-----------------------------------------------------------------------400-------------------------------------------------------------------------*/
+@media (max-width: 400px) {
+
+  .header {
+   height:80px;
+   }
+
+.logo {width: 100%;
+   padding-left:0px;
+   padding-right: 0px;
+   padding-top:10px;
+   }
+   
+   .logo a p {    
+        font-size: 5rem;
+        font-weight: 600;
+       }
+                  
+   .main-menu {background-color: rgb(8, 128, 128);
+   width:200%;
+   height: 55px;
+   margin-top: 5px;
+   padding-top: 10px;
+float: none;
+}
+   
+   .main-menu a {padding-left: 45px;
+   }
+  
+   .slider {width: 200%;
+       height: 400px;
+       margin-top: 130px;
+   }
+/*---------------------------*/
+
+
+   .ultimas_noticias {width:200%;
+   height: 900px;
+   padding:0;
+   padding-top: 20px;
+   margin-top:-5px;
+padding-left: 20px;}
+
+   .ultimas_noticias p {float:none;
+   margin:auto;
+padding-top:25px;
+width: 90%;
+text-align:justify;
+font-size: 2rem;}
+
+/*----------------------------------------*/
+   
+.proximos-shows {width: 200%;
+height: 900px;
+margin-top:0px;
+padding-right:35px;
+padding-top:60px;}   
+
+.proximos-shows ul li {width: 50%;
+  font-size: 2.5rem;
+   line-height: 3.8rem;
+   float:none;
+   margin:auto;
+   padding-top:30px;
+
+}
+
+/*--------------------------------------*/
+.la-banda {width:200%;
+   height: 1550px;}
+
+.la-banda ul li {width: 50%;
+       float: left; 
+       font-size:2.4rem;
+   line-height: 4rem;
+   margin-top:20px;
+}
+
+.la-banda ul li p {font-size: 2rem;
+line-height: 3.2rem;
+text-align: center;
+margin:6px;
+}
+
+/*-------------------------------*/
+.historia-banda {width:200%;
+   height: 1550px;
+   margin: auto;}
+
+/*----------------------------------*/
+
+.discografia { width:200%;
+   height: 1750px;
+  margin-right: 0;
+padding-left:20%;}
+
+
+  
+/*---------------------------------*/
+
+.contacto {width:200%;
+  height: 460px;
+  margin: auto;}
+
+h4 {background-color: rgb(8, 128, 128);
+       width:200%;
+       margin:auto;}
+
+form {padding:300px;
+}
+
+input[type=text]{width:100%;}
+
+footer {width: 200%;}
+
+}
+
+/*----------------------------------------------------------------------------------960----------------------------------------------------------------------------------*/
+
+
+@media  (min-width: 960px) { 
+  .logo a p {    
+      font-size: 45px;
+     padding-top: 14px;
+  font-weight: 600;}
+
+  .main-menu {
+      width:50%;
+      
+      font-size: 19px;
+      display:block;
+      margin-top: -36px;
+     
+      
+      }
+
+  .main-menu a { padding-left:6px;
+          padding-right:6px;
+          }
+
+  .slider { margin-top:40px;
+  height: 650px;}     
+
+/*------------------------------------------*/
+.ultimas_noticias {
+  height: 460px;
+  margin: auto;
+  margin-top: -110px;    
+  padding-top: 20px;
+  
+}
+
+.subtitulo {text-align: center;
+padding-left: 0px;
+padding-top: 10px;
+}
+
+
+.ultimas_noticias p {float:none;
+               width:80%;
+               margin:auto;
+               padding-left: 18px;
+               padding-top: 20px;}
+
+.contenedor-foto-1 {width: 60%;
+  margin-left:80px;
+  padding-top: 20px;
+  }
+
+/*----------------------------------------------*/
+
+
+.proximos-shows {
+  height: 320px;
+  margin: auto;
+  margin-top: 0px;
+  background-color: rgb(8, 128, 128);
+  padding-top: 410px;
+  }
+
+.proximos-shows ul {padding-left:10px;}
+
+
+/*------------------------------------------------------*/
+
+.la-banda {
+  height: 1150px;
+  margin: auto;
+  padding-top: 330px;}
+
+.la-banda ul {margin-right: 5px;
+      }
+
+.la-banda ul li {width: 33.33%;
+float: left;    
+display:block;
+color: white;
+font-size:1.8rem;
+text-align: center;
+padding: 0;
+line-height: 2.2rem;
+padding-top: 30px;
+}   
+
+.la-banda ul li p {font-size: 1.3rem;
+                width: 96%;
+              margin:auto;}
+
+.la-banda ul li img {width: 90%;}
+
+/*------------------------------------------------*/
+
+.historia-banda {
+  height: 1400px;}
+
+/*--------------------------------------------------*/
+
+.cds {padding-left: 100px;
+  }
+
+.cds p {text-align: center;
+  width: 150%;}
+
+.discografia { 
+      height: 1750px;}
+
+/*--------------------------------------------------------*/
+
+form {
+  padding-left:350px;}}
